Try to avoid page break in section

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -141,6 +141,10 @@ em {
         page-break-inside: avoid;
     }
 
+    section {
+        page-break-inside: avoid;
+    }
+
     .no-print
     {
         display: none !important;
